--- a/index.html
+++ b/index.html
@@ -1,1 +1,198 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Miramontes Resume</title>
+    </head>
+
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            color: #333;
+            background-color: #f4f4f4;
+        }
+        .container {
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 20px;
+            background: #fff;
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+        h1,
+        h2 {
+            color: #007bff;
+        }
+        .header {
+            text-align: center;
+        }
+        .header h1 {
+            margin: 10px 0;
+        }
+        .contact {
+            margin: 10px 0;
+            font-size: 14px;
+        }
+        .contact a {
+            color: #007bff;
+            text-decoration: none;
+        }
+        .section {
+            margin: 20px 0;
+        }
+        .section h2 {
+            margin-bottom: 10px;
+            border-bottom: 2px solid #007bff;
+            padding-bottom: 5px;
+        }
+        .item {
+            margin-bottom: 15px;
+        }
+        .item h3 {
+            margin: 0;
+            font-size: 18px;
+            color: #555;
+        }
+        .item p {
+            margin: 5px 0;
+            font-size: 14px;
+        }
+        .skills ul {
+            list-style: none;
+            padding: 0;
+        }
+        .skills ul li {
+            display: inline-block;
+            background: #007bff;
+            color: #fff;
+            padding: 5px 10px;
+            margin: 5px 5px 5px 0;
+            border-radius: 4px;
+        }
+    </style>
+
+    <body>
+        <main class="container">
+            <section class="header">
+                <h1>Alex Miramontes</h1>
+                <p class="contact">
+                    Email:
+                    <a href="mailto:alex@miramont.es"
+                        >alex@miramont.es</a
+                    >
+                    | Phone: (312) 342-1107 | LinkedIn:
+                    <a href="https://www.linkedin.com/in/alexmiramontes/">linkedin.com/in/alexmiramontes</a>
+                </p>
+            </section>
+            <section class="section">
+                <h2>Summary</h2>
+                <p>
+                    Experienced front-end web developer creating dynamic and responsive experiences
+                </p>
+            </section>
+            <section class="section">
+                <h2>Work Experience</h2>
+                <div class="item">
+                    <h3>Job Title - Company Name</h3>
+                    <p>Dates of Employment</p>
+                    <p>
+                        Brief description of your responsibilities and
+                        achievements in this role.
+                    </p>
+                </div>
+                <div class="item">
+                    <h3>Front-End Developer - Freelance</h3>
+                    <p>December 2023 - Present</p>
+                    <p>
+                        Built and maintained performant websites applying modern technologies and best practices.
+                    </p>
+                </div>
+                <div class="item">
+                    <h3>Front-End Developer - Veev</h3>
+                    <p>June 2021 - November 2023</p>
+                    <p>
+                        Launched a rebranded Veev.com in accordance with the Veev 2.0 style guide while providing subject matter expertise to the Creative Director and Vice President of Marketing.
+                    </p>
+                </div>
+                <div class="item">
+                    <h3>Senior Front-End Developer - Kettle</h3>
+                    <p>February 2020 - December 2020</p>
+                    <p>
+                        Collaborated with teams of developers to develop user-focused and functional marketing pages.
+                    </p>
+                </div>
+                <div class="item">
+                    <h3>Senior Front-End Developer - ICF Next</h3>
+                    <p>June 2019 - December 2019</p>
+                    <p>
+                        Built and maintained a library of custom UI components for a complex web application alongside external stakeholders.
+                    </p>
+                </div>
+                <div class="item">
+                    <h3>Front-End Developer - Critical Mass</h3>
+                    <p>July 2017 - April 2019</p>
+                    <p>
+                        Maintained the websites of clients such as Nissan-Infiniti and McDonald’s USA, producing advanced page layouts and optimizations.
+                    </p>
+                </div>
+                <div class="item">
+                    <h3>Front-End Developer - Breakout Studio</h3>
+                    <p>March 2017 - June 2017</p>
+                    <p>
+                        Generate branded email messages and templated websites for clients.
+                    </p>
+                </div>
+                <div class="item">
+                    <h3>Front-End Developer - Movéo</h3>
+                    <p>April 2015 - May 2016</p>
+                    <p>
+                        Established pattern libraries, using knowledge of design and layout best practices to create components, ensuring consistent usage site-wide.
+                    </p>
+                </div>
+                <div class="item">
+                    <h3>Front-End Developer - Sears Holdings Corporation</h3>
+                    <p>January 2015 - November 2015</p>
+                    <p>
+                        Updated the Kmart and Sears Fashion websites on a weekly basis as necessary to ensure optimal functionality.
+                    </p>
+                </div>
+            </section>
+            <div class="section">
+                <h2>Education</h2>
+                <div class="item">
+                    <h3>Bachelor of Arts - Columbia College Chicago</h3>
+                    <p>2008</p>
+                </div>
+            </section>
+            <section class="section">
+                <h2>Skills</h2>
+                <div class="skills">
+                    <ul>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>Sass/ SCSS</li>
+                        <li>JavaScript</li>
+                        <li>Responsive Design</li>
+                        <li>Git</li>
+                        <li>Adobe Creative Suite</li>
+                        <li>Figma</li>
+                        <li>macOS</li>
+                    </ul>
+                </div>
+            </section>
+            <section class="section">
+                <h2>Projects</h2>
+                <div class="item">
+                    <h3>David Foster Wallace Popup Generator</h3>
+                    <p>
+                        A project turning the infamous footnotes of author David Foster Wallace into popups within the document. This project was created using HTML, CSS, and JavaScript.
+                    </p>
+                </div>
+            </section>
+        </main>
+    </body>
+</html>
